--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -8,13 +8,7 @@
                 <i class="fas fa-times"></i>
             </div>
             <li class="nav-item">
-                <a class="nav-link" href="#">Projects</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">About Me</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="#">GET IN TOUCH</a>
             </li>
         </ul>
         <div class="icon menu-btn">
