--- a/base/templates/base/contact-form.html
+++ b/base/templates/base/contact-form.html
@@ -1,14 +1,3 @@
+{% extends 'index.html' %}
 {% load static %}
 
-<div class="title-card">
-    <div class="container">
-        <h3>CONTACT</h3>
-        <div class="title-card-banner">
-    </div>
-</div>
-
-<form action="" method="POST">
-    {% csrf_token %}
-    {{ form }}
-    <input type="submit" value="">
-</form>
