--- a/templates/index.html
+++ b/templates/index.html
@@ -22,9 +22,7 @@
 
     {% block about %}{% endblock about %}
 
-    {% comment %} {% block contact %}{% endblock contact %} {% endcomment %}
-
-    {% include 'base/contact-form.html' %}
+    {% block contact %}{% endblock contact %}
 
     {% include 'footer.html' %}
 
