--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -5,22 +5,24 @@
 
 <div class="banner">
     <div class="profile">
-        <div class="container">
-            <div class="profile-card">
-                <div class="img1"><img src="{{profile.profile_background.url}}" alt=""></div>
-                <div class="img2"><img src="{{profile.profile_image.url}}" alt=""></div>
-                <div class="profile-name"><h2>Hey, I am {{profile.full_name}}</h2></div>
-                <div class="profile-title">{{profile.short_bio}}</div>
-                <div class="profile-location">Based in {{profile.location}}</div>
-                <div class="profile-socials">
-                    {% if profile.social_linkedin %}
-                        <a title="LinkedIn" href="{{profile.social_linkedin}}" target="_blank"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
-                    {% endif %}
-                    {% if profile.social_github %}
-                        <a title="Github" href="{{profile.social_github}}" target="_blank"><i class="fa-brands fa-square-github fa-2xl"></i></a>
-                    {% endif %}
+        <div class="row">
+            <div class="container">
+                <div class="profile-card">
+                    <div class="img1"><img src="{{profile.profile_background.url}}" alt=""></div>
+                    <div class="img2"><img src="{{profile.profile_image.url}}" alt=""></div>
+                    <div class="profile-name"><h2>Hey, I am {{profile.full_name}}</h2></div>
+                    <div class="profile-title">{{profile.short_bio}}</div>
+                    <div class="profile-location">Based in {{profile.location}}</div>
+                    <div class="profile-socials">
+                        {% if profile.social_linkedin %}
+                            <a title="LinkedIn" href="{{profile.social_linkedin}}" target="_blank"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
+                        {% endif %}
+                        {% if profile.social_github %}
+                            <a title="Github" href="{{profile.social_github}}" target="_blank"><i class="fa-brands fa-square-github fa-2xl"></i></a>
+                        {% endif %}
+                    </div>
+                    <div class="profile-proj-btn"><button type="button" class="u-button">MY PROJECTS</button></div>
                 </div>
-                <div class="profile-proj-btn"><button type="button" class="u-button">MY PROJECTS</button></div>
             </div>
         </div>
     </div>
