--- a/templates/footer.html
+++ b/templates/footer.html
@@ -3,10 +3,10 @@
 <footer>
     <div class="footer-card">
         <div class="content">
-            <ul class="social-list">
-                <li><a href="#"><i class="fa-brands fa-linkedin fa-2xl"></i></a></li>
-                <li><a href="#"><i class="fa-brands fa-square-github fa-2xl"></i></a></li>
-            </ul>
+            <div class="social-list">
+                <a href="#"><i class="fa-brands fa-linkedin fa-2xl"></i></a>
+                <a href="#"><i class="fa-brands fa-square-github fa-2xl"></i></a>
+            </div>
             <div class="copyright-row">
                 <p>Copyright ©{% now 'Y' %} All rights reserved. Designed by <a href="#" target="">MSREZAIE</a></p>
             </div>
