Added new app for CryptoDen
A new app dedicated for showcasing my textual cryptography python project known as CryptoDen

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -289,7 +289,11 @@ html {
 
 @media (max-width: 868px) {
   .profile{
-    padding: 130px 0 0 0;
+    padding: 110px 0 0 0;
+  }
+
+  .profile-card{
+    width: 320px;
   }
 }
 /* PROFILE-CARD STYLING END */
@@ -313,8 +317,13 @@ html {
   border-top-right-radius: 5px;
   object-fit: cover;
 }
-
 /* PROJECTS STYLING END */
+
+/* CONTACT STYLING */
+.container .form-list{
+  overflow: hidden;
+}
+/* CONTACT STYLING END */
 
 /* FOOTER STYLING */
 .footer-card{
